resolve pink-dot top overlap with blue-section text

--- a/src/styles/shared/shapes.scss
+++ b/src/styles/shared/shapes.scss
@@ -23,7 +23,7 @@
     right: 15vw;
     background-color: $human-pink;
     text-align: center;
-    top: -25%;
+    top: -50px;
     
     .pink_dot__text {
       color: white; 
@@ -38,7 +38,7 @@
     .pink_dot {
       left: 50%;
       transform: translate(-50%);
-      top: -5%;
+      top: -25px;
     }
   }
 }
